--- a/LMS_Hackathon/pom.xml
+++ b/LMS_Hackathon/pom.xml
@@ -47,6 +47,12 @@
     <artifactId>allure-cucumber7-jvm</artifactId>
     <version>2.26.0</version>
 </dependency>
+<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-picocontainer -->
+<dependency>
+    <groupId>io.cucumber</groupId>
+    <artifactId>cucumber-picocontainer</artifactId>
+    <version>7.17.0</version>
+</dependency>
 
 
   </dependencies>
