--- a/LMS_Hackathon/src/test/resources/config.properties
+++ b/LMS_Hackathon/src/test/resources/config.properties
@@ -1,2 +1,4 @@
 browser =CHROME
 url=https://lms-frontend-api-hackathon-apr-326235f3973d.herokuapp.com
+
+excelpath = ./src/test/resources/Test_Data/Team23-TestData.xlsx
