--- a/LMS_Hackathon/src/test/resources/config.properties
+++ b/LMS_Hackathon/src/test/resources/config.properties
@@ -3,7 +3,7 @@ url=https://lms-frontend-api-hackathon-apr-326235f3973d.herokuapp.com
 
 InvalidUrl = https://lms-hackathon-930a8b0f895d.herokuapp.com/lms/
 
-
+lmsLogoimg = ./src/test/resources/Test_Data/LMS-logo.jpg
 
 excelpath = ./src/test/resources/Test_Data/Team23-TestData.xlsx
 loginpageurl=https://lms-frontend-api-hackathon-apr-326235f3973d.herokuapp.com/login
